Fix thumbnail width on mobile

--- a/src/app/components/thumbnail-list/thumbnail-list.component.css
+++ b/src/app/components/thumbnail-list/thumbnail-list.component.css
@@ -7,6 +7,14 @@
   margin: 0.15em;
 }
 
+/* Because a thumbnail min-width can be greater than view width on mobile,
+   override it to fill the parent (which fills the screen width) */
+@media screen and (max-width: 500px) {
+  .thumbnail {
+    min-width: 100% !important;
+  }
+}
+
 .placeholder {
   flex-grow: 99999;
 }
